<resources>
    <string name="app_name">FlagPang</string>
    <string name="textViewProgress" />
    <string name="textViewSelectCountry">Select the Country</string>
    <string name="buttonCountry1" />
    <string name="buttonCountry2" />
    <string name="buttonCountry3" />
    <string name="buttonCountry4" />
    <string name="TextViewReset">Reset</string>
    <string name="TextViewScore" />
    <string name="buttonReset">Reset</string>
    <string name="textViewAnswer" />
    <string name="buttonMain">Main</string>
    <string name="flagProgress">1/10</string>
    <string name="flagScore">Score : 0</string>
    <string name="flagCountry">korea</string>
    <string name="flagMain">Main</string>
    <string name="flagReset">reset</string>
    <string name="OX_country">OX_country</string>
    <string name="textSettingTitle">FlagPang Settings</string>
    <string name="textLanguage">Language</string>
    <string name="textLevel">Level</string>
    <string name="textSound">Sound</string>
    <string name="btnQuit">Quit</string>
    <string name="rbKorean">Korean</string>
    <string name="rbEnglish">English</string>
    <string name="rbBasic">Basic</string>
    <string name="rbMiddle">Middle</string>
    <string name="rbAdvanced">Advanced</string>
    <string name="rbOn">On</string>
    <string name="rbOff">Off</string>
    <string name="btnClear">Default</string>
    <string name="btnSave">Save</string>
    <string name="textby">MyDoubleJ</string>
    <string name="flagtextby">MyDoubleJ</string>
    <string name="buttonInfo" />
    <string name="textTime">Correct \n answer display \n time</string>
    <string name="rbSlow">Slow</string>
    <string name="rbMedium">Medium</string>
    <string name="rbFast">Fast</string>
    <string name="ox_btn_main">MAIN</string>
    <string name="ox_btn_reset">RESET</string>
</resources>
