<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e0ffff"
    tools:context=".SelectFlag"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/flagProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="12dp"
        android:text="@string/flagProgress"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/flagSelectCountry"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/flagScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="12dp"
        android:text="@string/flagScore"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/flagSelectCountry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.512"
        app:layout_constraintStart_toEndOf="@+id/flagProgress"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/flagSelectCountry"
        android:layout_width="365dp"
        android:layout_height="68dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="11dp"
        android:background="#00aa0000"
        android:gravity="center"
        android:text="@string/flagCountry"
        android:textAllCaps="true"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/flagImage1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.666"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flagScore" />

    <ImageView
        android:id="@+id/flagImage1"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        android:background="#778899"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/flagImage3"
        app:layout_constraintEnd_toStartOf="@+id/flagImage2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flagSelectCountry"
        app:srcCompat="@drawable/canada" />

    <ImageView
        android:id="@+id/flagImage4"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:background="#778899"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/flagImage3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/flagImage3"
        app:layout_constraintTop_toTopOf="@+id/flagImage3"
        app:srcCompat="@drawable/canada" />

    <ImageView
        android:id="@+id/flagImage3"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:layout_marginBottom="9dp"
        android:background="#778899"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/flagMain"
        app:layout_constraintEnd_toStartOf="@+id/flagImage4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flagImage1"
        app:srcCompat="@drawable/canada" />

    <ImageView
        android:id="@+id/flagImage2"
        android:layout_width="150dp"
        android:layout_height="0dp"
        android:background="#778899"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/flagImage1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/flagImage1"
        app:layout_constraintTop_toTopOf="@+id/flagImage1"
        app:srcCompat="@drawable/canada" />

    <Button
        android:id="@+id/flagMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="8dp"
        android:background="#00ff0000"
        android:text="@string/flagMain"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/flagReset"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flagImage3" />

    <Button
        android:id="@+id/flagReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="#00ff0000"
        android:keepScreenOn="false"
        android:text="@string/flagReset"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/flagMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/flagMain"
        app:layout_constraintTop_toTopOf="@+id/flagMain" />

</android.support.constraint.ConstraintLayout>